--- a/trunk/Code/TUVANLAPTOP/TUVANLAPTOP/CAPNHATDULIEUKHACHHANG.resx
+++ b/trunk/Code/TUVANLAPTOP/TUVANLAPTOP/CAPNHATDULIEUKHACHHANG.resx
@@ -117,4 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_Update.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBggGBQkIBwgKCQkKDRYODQwMDRoTFBAWHyQZIB8cHh4j
+        JzIqIyUvJR4eKzssLzM1ODg4ISo9QTw2QTI3ODX/2wBDAQkKCg0LDRkODhk1JB4kNTU1NTU1NTU1NTU1
+        NTMtNDU1NTU1KTU1NTU1NTU1NTU1NTUsNTUuNTU1NTUpNTU1NTX/wAARCAAwADADASIAAhEBAxEB/8QA
+        GwAAAwACAwAAAAAAAAAAAAAABQYHAQQAAwj/xAA0EAACAQIEBAMFBwUAAAAAAAABAgMEBQAGESESQVFx
+        EzFhFTORobEHFDJigeLwIiNCQ1L/xAAXAQEBAQEAAAAAAAAAAAAAAAAEAgUD/8QAJREAAQQBAwMFAQAA
+        AAAAAAAAAQACAwQSESExBaHwMkGBsdET/9oADAMBAAIRAxEAPwC44A5gzP7NqUt9vhWsucq8Xhs/CkK/
+        9yNyHQDc8sZOestAa+3KE9pgcTa33t52qLhNqKivlM8mvmAfwr2C6AYLYsCIbHlCtWmwtGh3KdEF7m/u
+        VWZ2hc/66OjiCL2MgYn44w1XmG26yUt2p7uo3MFbAsLEdFkj0APdThGhu6X6teGqu8duokJUgzeG8vXU
+        +YHoPPDjS/ZdYqmjjmThlEqh0mQk8QO4IbXXERl8gyB7qIjJK3IHumKwZnpb94kISSlroPfUk2gdPUcm
+        X8w2wZxLb5ka9WCWG6WCslqHozxxxyHiYDmoJ3II2Kk7+mKLZbl7Xs9NWmJ4GmjDNE43RuanthLC7hw3
+        S43POzxupnnvJEtnnludpUmjkYvNCo90ebAdOo5YUEllI1Bx6GdFkQq4BU7EHE+uv2YpJeRJRPwUUrcT
+        wabKeeh6emM61RMjso/lZV3ppldnFtrz+pUy3lyqzNVqG1+5g/1HlJ+364rVVW0mWLIr1LsUjAREUavI
+        3JVHMn+bY63NBlCwSVEo4IYFHEVG7E6AAdyQMIE2YReLn9/q54mmGoggV9VgXoOpPNufbFufHRjxbyfN
+        V0e+Lp0QY31HzUpst+aK+GtjXMEFNT01Z7l4WJ8Bj5RyE8yP8hoNdsNMcaRLwxqFHQYktbeUaB452Vom
+        GjBjsRgxknPcQq47NXT+KjngpZydSOiN19D+hxNa817sHKKfUmyO/m/4Kb8zWg3uxy00bmOYESQyAkcL
+        ruDthbsGcblCDRXWkaqmgPAxjZVmHdToG7gjXpzw84B33K8F3cVETGnrEGizJ5kdD1HocNljeTlGdD9r
+        QmieTnEdD2K5NmAVEDxparjIWGhUoqD4lvprhNuVpLVJmljjjbTRYoiWWMdz+I+u3Yczet9taGOa3xVw
+        Hk6StH8tGxqTperrpHDbY6PXzcuZD+moUD59sEmZNM3EoNiOxOzApapLWa2/01Kg10cO+nIDy+f0OKdF
+        lm3RMrrDo6768XPGrlvK8dmDTSnxKmTdmO51wfwirXFePH3SqVUVYsPfkr//2Q==
+</value>
+  </data>
+  <metadata name="timerRunProgressBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="timerShowResult.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>243, 21</value>
+  </metadata>
 </root>
