--- a/trunk/Code/TUVANLAPTOP/TUVANLAPTOP/DANGNHAP.resx
+++ b/trunk/Code/TUVANLAPTOP/TUVANLAPTOP/DANGNHAP.resx
@@ -117,4 +117,171 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_Login.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhMAAwAIcAAKZwGebm5v7wjf///2lpaNzc3fzRbf2YMqmpqf/6x8HBw7a2tpubm6et0qOAU9yP
+        K/78nfDw8IODgv+pRKvS+f6iPfvRjtSnb9KtT/67Vfnkq/n5+f2yTMPN4rWGM11dXfa2ZNi4gIyVr//9
+        29Xp/P3DXnpiN8mBHbuYYY9zR++gP/3hfXx/i6Cgwo2OkvXewvmtV/GyTHh4ec+dPZGluWRWQODJp///
+        7+OvSv//95eKdv747svLzNTU1NvSyLOziQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAADACwAAAAAMAAwAAAI/wAHCBxIMEIPBAwkKFToAgGPCAQj
+        SpxIcWAPFwRYMHDYo0APBQhlEJCwIMKGATtevAhwsqLLARFcyKDRgQQJjx178CgQoEAHBCwIIHgBw0CJ
+        CSpCsHwpsQABGhRINMD4oapVAhkRKOjQgkUKARAgCKjwAEEAphElQKUg46qMhQpFfiDgosFUCRBWTDhw
+        wEGPlmgVuKBAgUCNDxK0dizgEYEErCl0EGjRQISMDHsPeEAAEe2AuhREVGXQw+SAHgwIyGCgwIYKCwls
+        TG4gA8VesjoKeB4ggTCLDy4YO169gHGBEDA0JFj+g0XlFBwOVFDhQAHglxIahB5JnGeAnj5gwP8esVyA
+        AAINWhBQIZ3DCQZnmW5wwSIo6Qj4v3+3MUHDiP8aGADWZOqd0B51fzFVgAsL8LDBg/hF4JEPIIDw338G
+        ZCDgeZURYGAFHHCwWWcuFYCAQBAWABICIby2ww03JABDBRquIIFzXn3IQQkP5MZUBAhAyMMCCDFwAQwJ
+        5ACjBRUcMEEGGKiWnmE6lhBDCta9NN8GEQRAJEIIqKDBDjnsAAJf0jlAl10EmACASiCWYMB78bnEQH5E
+        MsCADA5kENYKaGqGngLqmYDCCBpUEKcBCF43EQIFSJhnah2oYN5YaD4wGUYphJCAAdHFGQMABGTpEgI9
+        fIcAmASQYEMG5hn/gGYFKbTpwQqfYtbeAyZ8wEABjkqkAA+q6omASAQ8sIJ5TTr5AAAY/JnhbQ/UQMCv
+        wQqrQLEMLKAQizEIsEIJfE0QgwFh5TXtA2SZAGm2En3E2AIbDZtqBCqsoG+TTy4rbQbPOgkAZ56ZKFy9
+        kcL0qr4ZOKkhWOpmoAIAJ3DQo25obQCpid0Se1IAPeS7ggEVPClgWAZMewIA5gJQkmek9UCkAqkOsEEA
+        PIQQg74cmAzWuOPuBcADPPqIFqoyN5iwlwss8EDKBvhswAMzjBzdyhlcqQCJLjX9UYMgO4ZA0yicm6GG
+        OABQwwkrQBDdAQDMMKcOdboUQL2rPvaBDAqA/8TAAxqWYDEAiKGAAwSyVnDCCQbggCW8BG1QQEJyySAT
+        D35L4MAMD5xgLWkBnCCWdCqcgMPcdVd0swJ6LpCqCz2glpAECshgrVkPXoDDCirQuHjjj3vWZQCmsSa7
+        CxLwwMAHZg1UAAopDJ0ACCecCwB8u0XEAA+oIXD58i+jaKIOM3z6gLIYpOBg9gPxkNhGe/KAAPNcc3mB
+        p1aeUMIK16cuvAISkIHM+LYAX3FNIBfAgAXk9IB8zUB9kHNJBDbiJdopwFf+s4ED4ja9p/GPYOyDiQR6
+        4i2aAcd/EeCBA0IwgqlZ6oEJYh+9cOa+4iAGYxHZgAdYaIAYHMAAHzwgWuLuRpIekCQAqsFhRDygnJQd
+        IAYQgGEEJ7IB90WqIQF4TA8oggIAxG0EZxKAAUwQvuytSkIbiQkBtjiRCCwgBRjIAaBSZoI7sS8mxOue
+        GtcnES7tcAAjgwAG6ui/l0yOZjJzAZBKBTkP2ACQ5vFADUC4mypK4E6C2cACCFBGiXgAAB7AAAYkWSoh
+        /sgFDmKdG4ViSoHcTQYmMEENZNC8EKLmQagJwAVrSUWQDQlsU6TI9mDyHd7QTz74CWZFeOCCbZmEB3vj
+        YwjvCECSpAaD08ymQRyjGtIoM5tUNAjNlgLOAQQEADs=
+</value>
+  </data>
+  <data name="btn_Exit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAArvAAAK7wF9dopIAAAAGHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3NPsx9OAAAcMUlEQVR4XuWbdXQVZ9fF0SqUAEmIe4IUKB4lwb1FSoECheLB3SG4F4oH
+        QkhwhxCiJCS4uxVKKVYoBIIUq7xt97fPMzM3N0aBvv+868tae82deydz72+f85xHZiYPgDw5KU/7lZWp
+        JdSvFP5HJb9dGCrnypn1Ax5sRc2k7mWC/moV8vwbiYlfRry92vB/zfVP52q3wjxowjJD2LLxmr/BA3yo
+        G1nB8xI875eRyMsfkK9NpEn5+V7+L1eggLnacl9ppb6VzyPxfteNKDosAUWHxisVU0pQKv464v9aD0+E
+        FWUxJAGFB8WhkK4PB8ZC9MGAWLzTezvy99iCPB1Wa4a1jTQ3Qth8MjEbO/zAm3phghfo9tTnYcj76SLk
+        bTgfeRvMpeaZlI/vKTVakE35+Z5S4wXIW38uCndci7Jhl1BuGRX2HcpzK/qEqhB+2aSKyy8jq+Rzea/x
+        pmvok3QbEw+kYeaRB5hyMA0h++5i1N67GJRyB8EJt9Aq6jpqrf4eXnNPwWJUCvJ1WqdlXUYzFkZvE7e8
+        4BuWmSJP9yTaeRsv1GAFvpGIoATStDBDTRYiv0mL+FpTARonks/ebRmG0gvOoOzSiygbegHlllxAeRH3
+        P6Eq6KoYdhG5SY6rtOwi6qz5Hl1ibmDWoXtYfe4h1px/iIgz6Vh++oHaLj35ANP5Wee4WygXel5lhjIh
+        o1lIJlgqdt2A2SaHCJ+v9XINWoEzghJFc3AC5dOlwAVSV4HPFsNQwaaLocT3CjYNhefMo/gknJE3oHXY
+        Ssu+I5imyuGvVkUeI/9fhiaKaZ9t+AEjU28j/FQ6wk+nY/GJ+wg9eR/LTj1AJM345nAa6q2/isLDk7Jm
+        wjeKneAVqEfKAEl7ibwJnBlgRNoEnQGbM3SoglVqtkTpHUoywSUkFZUjr6gImwNXoSmGqi6/hFfJ/Fgx
+        42NmUVmq6carmHrgroJewgwIpRFiRjizIpT79WnC+wNizE0Q5gpiQERG+6ABny7Wo25EeRHy8ceLFDCj
+        aagAIQ0VbCbAmaHfab4UondbLEUBGmg/OA7VVv1girLACGw1UcRleFM+ka+WHCPHyv/I/8o5KlMfL2HT
+        oSG9E26qZhDGDBBww4Rvj91HxSXntZqQURiXiwG/maL/RbjW7tl+84lohig36AJmwAWbM9IiwooE+l0W
+        UNF71Ds0y6rnVlSN/B5VIzRoc2Bfvi/yW/FqGccZRsk5RGKGlhEX0X77dSxj5MPYLAwTVpx9gJ6Jt1F0
+        dIrWO2hF8VcxQNuRPr7pEuShAXkIn0cqv2SDiFHPZ4gg+T6juM3P40UFJMVFNKAgIy4qINsWBBd9vozZ
+        sRSF+B2VmP7VCKqiqP947wgN/nUM8BOT9GPleB9dRmZINpQOvYiO0TcQeZYFkZkgTULqw8wj91Fq3mnk
+        lS7SKIgKnjsffL0G5fpsRJle66kNaluaKtVTU0lR8Hp4cesVvA6eoh7r4EG563Lrvg5ufC1bV8rFULd1
+        cO66Ru3XiriIRhuvoQHbZENd6vWGH/nej9pWV33ui6SIKa27ijq6aq35AaKaq68gaNUVBFLVV16B/0ox
+        hd0qu9rh7BpXigk0QJpEGE2ou+4HFJBxgtE1GgYU67YefkO2wZvyEQ2lhkXBl/ITDdfkP3y7phGaAkQj
+        o1FdNCoagaN3mBQ0OgY1RGO0bRA/a7v6PIIT76B7/C30SPiJuq22wdyKeqrXmdUjnsdR3aluVFeqS5ym
+        zrG30CnmJjruEN3AV4x8++030HrrNX52Exu/e4ytl55gM7fR3z/BCI4ZrIfEIQ97OsVuGGAdvBHe/Tej
+        KuFF1UQ0wVuXMmRolDLFkC+NEPmNiDbJn0YEjNyhaZSm6gQXiYHNlx5Hj6SfFYTACJTACbTAKyVmVi/u
+        i0yfmxnUna/lPMoY9vtdaUgXGtKZasdB0ewjaYi7+guiLj9B7A+/4Juj6XANSc5uQImem1CNKS/Qhkzw
+        ZtA+OrQJnMD+hDUkwL40RAOPUQpkBogC+H6TeQfQY+fPGrQZeC8WKClSol47syvY7HN1nJkJci4jM8SE
+        LjRBDJBMGMiR444rNIDRj6EB8088hFtOBtjQgKrdVhM+ilHXZIo2oTXwaAXnS2i/LNAGcDUeUyskDt48
+        LnBsLIKU4pQCx8Si3vRUBW9AGMC9k+5wmJtZfbnfl9kiTWbALppGcDlGjhWTDMMMM8yNEBOkaUgTWXX+
+        kYq+aNGph3DP0YBem1Gl00pUG7xVwZpEEB8FzchSAm6C11M8gFEOIFyFwVHotuQArvz8C4auOqb2a4yN
+        R41xumhM7YmJ6MZhbC8dwgA3YAXYUD++7hx3GwsYtdtP/8CcY+ls97f5eYZR2YzQm5U0sa6sEe1ZExae
+        eMBm8FQ1hcVnHsF9XA5NwKbPFlT+KgLVBm6BDyEF2lAmcEL7K3ANWhTI6FYYsh2dFu3Do2e/c4QJ/PrH
+        n+gfeQQVh25HzfEJVLxSrXEJ+Hrz9+iXcldF0xy2f/LPEA3YdVepW8IdzD3+EL/+5291zud//IWZRx+w
+        ftyGmKP9r2aGyQi9aUhtERM6sDhOOyR1gAb88FQZ4DFuV5YawOmrbd+tqNw2HFX7bYIvIyommKKuoGPg
+        r0faAK8uaU1VHBKNzov34/ELDd74M0yoPHyHinztCYmoyWxot+ocBuxOUwD9zIAH0hTRoNS76M60n3ci
+        Hb/+qcEbfy/++FsVsu40R8wyDMzUNHQTpEl8zSYwas9dxNMAUejpR/Acn4MBdv00A6pwDOA7OlaDJ7if
+        AtcirURgkYIPiWeEo9El9AAeP88MbzLh9z8xcOUxVB0ZizqTk1CLWfBF2AkMpAESZQPaAB9M+GAWyQUn
+        H+K3LPDGOZ/ThNlsDj2kNtCwDCOyZ4PUgMGpP6sMSPiRGXD6MTzHcTSYqRtkBhgGVO6+Fr6E8yW4H4H9
+        FbgGrSke1Qku8JWGRaNr6EE8yRL5TCHjzks2h4GsCd6j41CXmdBs/kE90vdMER+ceg9Ddt9DT2bFQhaq
+        3OAzmXCcJuy8o86RNRuMJtGNvcKgXXewnT1BIg0IFQPG52jANlRutxyVOq2C/7g4+DHq/mbQJnCmcCDl
+        S1OCww8T/o+svDnuv2QmDFp1HD40sPGs3fzBtzGYwEN08KF83Tv5LhYxRbOmfW5fIM1hHgtkX/YQYoJk
+        lHmTEBNknDCAXeHWy79g57VnCD2TmwH9NQMqfhUJfxYtgffnjxXwAAJX18GD+Fl1qtaknbjz6MVrwRsH
+        iQmD15yE37hE9Iq5jmF770PAh+1JQx/+ePlx/xT5rF+Y/vJPdQ6jOWU1QbrOfjRgM0eDSdefYcnZJ/Ca
+        kFMG9I9CFfYCFdouZwbQAKZ4gEjgCRxIBU0QJaIG5R+SwIiewPPf/vNGJrz4TcuE1qsuYOSBdAwnfN+U
+        e28FL73DUlb1gfx/aUJSPDNnwh30ZBZIgdxIA3Zdf46luRlgPyAKVRn9Cm3CtcjTBJGCJ7AoaMJO1JiY
+        pFRzUhIqj4pDfxa4NzXh+cvfMT3lJvqmprE7fHt4yRgxTzJIskBMMIqqURN6s0bIWGP9xSdIuUEDzkkG
+        pGYvgsqADitQoVWYSv/qAj3eACf0BIrQNVnJRbWoOlOSUXV0PPq/RSZIqs87+QjzTz1647RXkT/7GP1T
+        0jBy330M35uWqwl92KOIAesuPkYqDQijASUn5mCAw+AdqNpxJT75Yqmq/oGEDSR0kA4u8DUEnNAiga8z
+        dRfqTtsF75BEDGDbfvGGzUFAjEHO67YjKZDLzj/BIHajo/c9UAYYJkgWSE9i3hT6sFeRLFirG7AsRwO4
+        bu80KhE+nLeXb7GYfb8YkKxMCJKUJ7ioJqFrE7rOFGpqCupyXF9vegrqz0iF77idGLz21Bub8LrganRJ
+        +OXnf8GQvQ8QcjAdYw48wKgsJgzTexajKchAqxcNWMMmkHrzOcSAUtkygEtEbuwbAzgYKvfZQs7sYlGD
+        kAa4vK5J1RL4aSmoQ3BRPYKLGszcreQ/MRlD1p1mTfjzTbhe61hpMpEXn2L4vnRMOPQQ4w6lY+zBB5lM
+        GMFsyKgHGQWxJwdMqy88wW4aEM7sydEAJ46OAtgMyjddhEAOgmozsgKtwacQnuAGvA5eXwdvMGsPGn6z
+        B41n70X1ySkYuv4Mnv/+Zr3Dq1wQ+JXfPcOoAw8x+cgjTDz8KJsJWZuCeUEUA1bRgL23XiCCmVBmUtYa
+        wOWhwkMT4dFrO1x5IaR0by6MsO0HTmbUCV1vxm7UI6yo7kyJ+m4oeII3mLUXDWfvQyOqyRzq230IolnD
+        Np7DC/b7//ZP4FddeoYxhx5hyrHHmHL0ESaJCdwfz0wIYSaEsCmM3s/msP8+mwRrAouidK9DdmtZEMx5
+        Qzi7y2R2g9+y8DqPzTobFAN4vc2tzw7Y1V+AIm1WoAhXcK17b4PLoGiUHhGHSmMT4ce6UEtSf6ZEfC8a
+        E/jTufvxGdXU2M4/gGZc9KhJk0ZuPv+vTPjtr7+x9vJzTCDwzBOPMeP4Y0ynpokRKhMymoJkwGAWRulW
+        g5Puoguh28feRqvtt9Bg43VMOXQfURwOi1lWw3dmrAyrJTHdAPe+MXBuFobiX66ERa9tKEoTLHQV7xWF
+        En23w67/DrgMiUWpEfGoMHYnqoxPgi8zpfq0VNSiMfUlE+YeQFOO92vP3ItBG87iycvXGy6bZ8tz9hAR
+        3z1HyJHHmHzsCSYefYwQpr40g2H70zFwzwP0SXmAHslp6Jx4D1/F/4wvY+6g1Y7baLH9JzTbdhOfbr2J
+        Jptvos6G67yeeJ/zgafMmgcoMSJXA3bA7YsIWLZbhaJ9olCcGWDJrRXBrakS/bbDpn80bJV2wHYAM4Zy
+        HBwL56FxcBsWD88RCSg5MhFlRu/k+3FoF3YMj15zvmBuwDOO8+ecforuqQ8xYC/H+3seomcqgXdxPSD5
+        PjonpaFTYho6JhA+7i7axWkGtKYBX0T/hM+jbtGEW/hsy03UowEh++6pCdGrDegTDfcvV8Gm4zrNAAO+
+        XzThowlP4IExsB8UA4dBsXAioBNXWF14qVvg3YYnwIMGeI5IhGW/HWi95Ch+efn2xfAls2D+2WfolvIQ
+        /WhA793p6ClR33Uf3Rj5LjvT8DWj3yH+Ltr/gwGj9r6mAR40wLHHVhRjxC37RsNK4Aluw+tqtoS3I7gD
+        Iy7RFXiJvKsO7y7wo3bCqn8M2hD+6a9vD29aT6AJc888Refk9H9lwBDOE6QG/HMGtFkJl34xsCSoGGBN
+        +BJMcxsFL9EXAwz4eLgQ3pWRd2faK/iBcWiz9Nh/Bd40i6QJc07/gg477791Bsjc4LUMcGu1Ah5DEmE7
+        ahcNYNtX8LGwIbgdwR2GxMORKe/EOzZcCO7KdHcnuMeoJFgKPNv8fyPy2RZVaMKsE0/QPiEN3VkDurIG
+        SPHrmHBXFcB2sXfQJoZVnzWgJYug1ICmLIJGDZCxwGsb4EkDnKceZjtm4VPwcbAlvD3hHQjvSHhn3qri
+        Qni3kTtpQBKKE771fznyOZkgXeGXcfdU++8kBrD9f8X23zaLAc11Az7dcgN1N1xDp9ifsO17NgGOHnPs
+        BQqpcUA03FpFwmNQPNx5EdGa8MqAwfGwI7y9Du/EyDsT3pXwboQvNjAerd4CXobMbzpslsI49dgjfLHj
+        Z70AMvqvKICGAe2ib3FV6EnuNcDcAHfWgJK8zGw3MpkGsPjRHDveyOTAyDsy8s7sR10EfnQSigp82PE3
+        TvvnHCV+veqs0pua8IImTD7yEC2i76j0N6KfUxfYZPMNXli9hlYcF8iawARmgHVO44BMBjATSi79Di6T
+        D6AE277tsETYUQ6EdyK488gkuI5OVvBfvCV89/UXUGbyPnxM9Y+6wpnemw2aX/znL0w4nI5Pt93O6P93
+        aG2/hVn6N958neOAa2jOprDq/ONXGcBq3nsHXNkE3Dgn8Fp8Ee5zTsCGkRcD7AnvQOecRiXDmbLjPTdt
+        l59648i/4AqxwJeevB/+c47Af/ZhVJ5zjMNauQbw5iZM5FxARn7mxc8YAEn6N+IwuD4NkEvyYWcecg7B
+        oXDOGWBmQPA2eCw4h5KLzsFhTIpmwIgkODDyAu/IrUdICm4+fPlGv1gmRwJfatI++An8t0epIwicdwyN
+        Nt1Qkxxp42/yd+/FnyoDPtcrv3nxa7zpOhrqBtRc+yMvjKbT6FwM+JCFzrV3NFxbr+ANDltUESy5+AJc
+        phzUDGA9cJToj0mGy5hdsGc32XLZCTx+zXH+S17W6rb+Irwm7YcP4f3mEH6e6Biqzz2G5rzJqSnb9ARG
+        9HVXiZ79/hfGcAbYjCkvqW8OL21fot+Q0ZcmUH31D5hx+H7uGZDJgM4bmf4n2QwuwIPNwI4Rd5DIj95F
+        A1LU3V5u41JhyWbQLOwkL4m9erKj4DdchCfhvQnuw8j7EVrgA+Yfhz9fN159GW1Z0Jps+4ldVfo/ZsIz
+        nlPWAhtystOSMz4DXvp9lfpm0a/Lu0wCeHPWGN4cMYFNwDKn2aAY4CLrAa1XwpVzAbdZx+G56DxKLjwL
+        x3G7GXEaQHjnsam6AbvhMWEPrEfuUiY8zMUEuSrUlfDuhK/GyHsT3ufbY/AlvD/hA+afQMC846jHW2da
+        M5VlMNNo6y01bc0tE579/reCb7DpphZ5TnqMQY/AG6nfgJGvy9tt6qwTA65gQLJkmBiQmH06rAzouR0u
+        HAq7tl0N12mH4S4GUK7TDmkGEN6Z0XelIW7j99CAvfCauBc2o1PRbNmpbCZI5Lsw7d0mHUCV2UdRldH3
+        JrzP3OM0gJEX+AWaai09o0ZwMpOTgtZwyy2M5RQ2qwkyS5RlrwasGcaMzwTPtDeHl9QX+Nprr/LeoSsc
+        DN1idt2HJZu06U4xbT0gEh9wtOccHKUZwAmRawghCe+18Bw8vj3JYrhLM4DwLoR3Y/Q9CO/JglZqyn7Y
+        jt2D5stPI13PBAPelZGvTPgqhK9GeG/CKwMI7bfgJPypgIWnEBR6Gs04dBUTlBFUPUZ49P40XlvUCuNT
+        tvmhe+6h3sYb2aIubT43+Jq8mcqPBrTcep2rRfdyygDNACfdADHBZTBHhjTAY/4ZeC04CydGWxlAeBfC
+        u3Hfg/Ce7MdLTjmA0tMOwH7cXrReeQ6X7j1H8OZLcCZ8xdlHVDdXhfBVCe7NyHvPOwFfRl/g/QkfsIji
+        thHvBGse9ZPqx0US4TqEDWGhu/bkD97glKb2m7GJSFs32rup4LHoSdqbR17gg1gAJQMabbiKfryOKHed
+        Z8mACHzAJuAUvB3OAs8McOm+Fa7zzsCd8F7sDl2nH4GDGEBwF8p14j54sC/3pLymHkCpaQfx8YxD8Jx6
+        EBW/OYKS0w/jE0a+IqUZcBxVCF+N4D6U7/yTzIJT8Bf4xaeVEfV4l7dUdEnpDN1SXaSY0ZBbeV/auciI
+        uqr2encnBc9I+1pMfYEP1A2Q2+k68+aKHOYCkXiPkxmHnlFw4mzQmTXAhXKechiu888yC6jZJ+AQskcz
+        gPCS2u6MvCflNf0gSk0/hDIzD6PsrKPcHkH5b46iAsErUpUY+SqMelWCexPam5H3JbDfotNKAYvP0IjT
+        qL3iklrG0iKbAaoKG1NcgA1oI90F3Ii6ObwReYEPkPsHeQeq3FTZMuoGbLINhHjv7LtcxLCjAY6fL4cj
+        xwJOLSPgyHGB46wTcJ5xDK6809t+TCrs2RVKJjiyGDqP2wNXNgl3yQbVHPajJFWKppRhJnxMU8rNOIzy
+        s46gAptCJZpRmZlQlWZUYwaIGeZGBC47r6ItsApYokwjTGKX15hqJH08j5OMkAXPehzlyYyvDqNfm0VP
+        Il9jzVUEMv2rM+pigNyCKwbU5OfZmwANKMBF0BIcCjs0Xwb7ljRBDOCw2G4su0D2CI5TD/F1KmxYQW3p
+        oD1ngcbYwIn337rwM1fpIcam8Da0FN6Jlco7MTR5TdjN63F7eEFiD0qzcH48aS/KTqZYPMuxdnwyQ3QQ
+        lWYdRkDoWVRfek4pMOw8gmhKdW4Dl11AYPgFBC2/iKCI76hLCIrUVGPFZQQRMIh3iQbydQBfiyTqfrxr
+        1Lil1ltuq119FUU5v8lcA3iHSP5um1B8AKe9TcNg1yIc9pRD8zDYd1gHWxY3u4n7YccMsGatKMH5gQ1n
+        hnYsJvYcVDhwmCzDYyea4qQPl104WXLjqNGdvYeHaOwueNIYLxpTkqaUGp+K0rxKW5rmlDE0cTcqzjrE
+        msHCKcVTV4WZh6DEGmO8FsMMlWcTLEeVZR0qy6wTSfYp8X/KUKWpUszGMmya7/fYrHq+THeK5u24GoU4
+        u7Nh9O0+XQo7Lo/bUw6fLYEdR4Yl2P5taIAlewtZ9rLmAkkJmmHDqbItDbGnITJdNuTINQMnrhmodQNm
+        jLF2IOsHsoDiQYM8aZDIi+aISlIfMzMEqDwzw5DKFkoyx1xluF9aScuukuydJNu8xu9m5mlyp9mSka48
+        t2SnzGfykdX8ZmntdnneMC0PHFl23ADbRotgS3CRHWXfJBQ2HdaqCwrFCVyca4WWXCu04nKZNRdLZeFE
+        lsxsaIqtTJ8pey6c2nPR1IFy5GKKkyyjUc5cQ3Q2ltOYQa6UmxhEufH8nsyWUoQoRYjSugyDzLdynEhl
+        F+VOQ0WyRuFKg0Uuko2SmTKLpZxl8YaLvHmY8ea3y2sPTNCAvF+vxYcsfFasA7YNF8KmyWLYUnY0wK4h
+        TZFrBiyUFlwvkFXj4n1omIgnldVja14vsJKFVEquH5iuIejXD+wGssaoJXVNcj3BSYljEF2yyCoZYi5Z
+        dM0qFzFRlzMz0DBYtrJm6aibLw9pyEq2Hb9HlvUKdlpr/uyQemCioumRGZqQn4+3FeJs0FqiXm8+bMQI
+        yQhRgwWw49ayVQQsWDMseLVIXUGiilHFRbySJLKkrLhvxYsrconNmtcYSlA2NM7WTHZcd7TrnyF7Gmdc
+        b5Bld5EDV6VMopkOlL2Z5GqVIXXRRq5h6JKrWSLZ/7D7JnN47ZEZjjDFhIyHppgNBQn3YZdNKMYiWEJM
+        qDsPNvW55XVDW25t685FiQbzYfl5OCz4OFwR3n9fJHgLLLhVxlBFpajyC4tRliw6xSnZWvakgjfDisdb
+        9dyCEoZ68XWvrbCh7GiUXd8MyXuG5JicZM335XyGLHl++R75XvmuwgKf+QlY7aEp3YDMj83xwPyd1+O9
+        rptQqN1qWNAIK0bemhlQoh7NqPMtbGrOgW2N2bCpPQfW/Kx4S5rB5ww/YjP6iM/liIp0Wo8iPI+FrqJd
+        NkCpq6Ziuop32whzWcmPNpMlPzdUvNsGHkvxf0XGOYyt9h3rUZTfqbbM6Pf52mjmugmZH5vTTcj84CRN
+        kEdLChDkXYK8z0h/yGuGhdh9fNQ6EoUZ/Y9aLEMRSgwqykdiLPhoTOHWEfiwPXsUmiGPyBT6ajUKUx+J
+        eL4iHdagSMcMWfC1ZJGoqCF+Z7HOGbJg1c4mnsdCzqXOmaGP+J1yfgnEB2zvBfg6S+SzPzgpBugmZH90
+        VjciH0+cn19YkD/OJP7IgtQ7SutpFM0ihBJ/gOi9XPQ+31fi/+SkD/i+ofcJkquM8+jf844Ejb81nzwX
+        pFI+0zPEuT86a2ZCzg9P/+8+QS5GvN7D04YJejb8v3h8/v8Aa1U8WSs7CFwAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
